# quant-platform

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
agents/: postmortem-analyst.md  ranker.md  research-orchestrator.md  researcher-deep.md  researcher-triage.md
brain/: CLAUDE.md  index.md  log.md
contracts/: README.md  events.schema.json  (+5 more)
infra/telegram/: README.md  ecosystem.config.js  pyproject.toml
infra/telegram/queue/: evt-2026-07-19-digest-1.json  evt-2026-07-22-digest-1.json  evt-2026-07-22-digest-2.json  evt-2026-07-22-digest-3.json
infra/telegram/tasks/: task-20260720T105329-0.json
infra/telegram/telegram_bridge/: __init__.py  bot.py  core.py
infra/telegram/tests/: test_core.py
live/: Cargo.toml  guardrails.toml
live/src/: broker.rs  lib.rs  main.rs  session.rs  startup.rs
live/tests/: live.rs
sandbox/backtest/: DATA.md  conftest.py  contracts.py  pyproject.toml  ranker.py
sandbox/backtest/backtest/: __init__.py  cli.py  data.py  engine.py  env.py  oos.py  risk.py  signal.py  thresholds.py
sandbox/backtest/scripts/: cross_sectional_momentum_stocks50_backtest.py  dual_momentum_equity_bond_gold_backtest.py  fetch_crypto_universe.py  fetch_stock_universe.py  fetch_wider_universe.py  high52_backtest.py  low_vol_anomaly_stocks50_backtest.py  mean_reversion_backtest.py  ms_shift_btc_eth_backtest.py  ms_shift_tsmom_blend_btc_eth_backtest.py  option_c_oos_validation.py  overnight_return_decomposition.py  pairs_trading_stocks50_backtest.py  rearm_validation.py  sector_rotation_backtest.py  tsmom_backtest.py  tsmom_breadth_gate_backtest.py  tsmom_btc_eth_backtest.py  tsmom_ms_shift_blend_backtest.py  tsmom_ms_shift_dualmom_blend_backtest.py  tsmom_ms_shift_tltgld_blend_backtest.py  tsmom_tlt_gld_backtest.py  tsmom_vol_accel_backtest.py  tsmom_vol_accel_hysteresis_backtest.py  tsmom_vol_target_backtest.py  turn_of_month_backtest.py  vol_regime_backtest.py
sandbox/backtest/strategies/: cross_sectional_momentum_stocks50.py  dual_momentum_equity_bond_gold.py  high52_spy_qqq.py  low_vol_anomaly_stocks50.py  mean_reversion_spy_qqq.py  ms_shift_spy.py  ms_shift_spy_high_displacement.py  ms_shift_tsmom_blend_btc_eth.py  ms_shift_vol_regime.py  pairs_trading_stocks50.py  sector_rotation.py  sma_cross.py  tsmom_breadth_gate.py  tsmom_btc_eth.py  tsmom_ms_shift_blend.py  tsmom_ms_shift_dualmom_blend.py  tsmom_ms_shift_tltgld_blend.py  tsmom_spy_qqq.py  tsmom_vol_accel.py  tsmom_vol_accel_hysteresis.py  tsmom_vol_target.py  turn_of_month_spy_qqq.py
sandbox/backtest/tests/: test_backtest_engine.py  test_contracts_roundtrip.py  test_cross_sectional_momentum_stocks50.py  test_dual_momentum_equity_bond_gold.py  test_high52_spy_qqq.py  test_low_vol_anomaly_stocks50.py  test_mean_reversion.py  test_ms_shift.py  test_ms_shift_gaps.py  test_ms_shift_golden.py  test_ms_shift_tsmom_blend_btc_eth.py  test_ms_shift_vol_regime.py  test_oos.py  test_pairs_trading_stocks50.py  test_ranker.py  test_risk.py  test_scaffold.py  test_sector_rotation.py  test_tsmom_breadth_gate.py  test_tsmom_btc_eth.py  test_tsmom_ms_shift_blend.py  test_tsmom_ms_shift_dualmom_blend.py  test_tsmom_ms_shift_tltgld_blend.py  test_tsmom_spy_qqq.py  test_tsmom_vol_accel.py  test_tsmom_vol_accel_hysteresis.py  test_tsmom_vol_target.py  test_turn_of_month_spy_qqq.py
sandbox/paper-engine/: Cargo.toml
sandbox/paper-engine/src/: alpaca.rs  feed.rs  lib.rs  main.rs  session.rs
sandbox/paper-engine/tests/: session.rs
(+91 files in other folders)
