[package]
name = "live"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# This is the ONLY crate allowed to hold a broker order-submission client.
# Its runtime environment is the only place live trading keys may exist.
[dependencies]
chrono = "0.4"
dotenvy = "0.15.7"
engine-core = { path = "../engine-core" }
paper-engine = { path = "../sandbox/paper-engine" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
