[project]
name = "telegram-bridge"
version = "0.1.0"
description = "Two-way Telegram control bridge (P6): owner-pinned commands in, event digests out"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.2",
    "python-telegram-bot[job-queue]>=21.0",
]

[project.scripts]
telegram-bridge = "telegram_bridge.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["telegram_bridge"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
