[project]
name = "backtest"
version = "0.1.0"
description = "Walk-forward backtest harness (P4): manifest in, contract-valid backtest_result.json + equity curve out"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.5",
    "matplotlib>=3.11.1",
    "pandas-market-calendars>=5.4.0",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "vectorbt>=1.1.0",
]

[project.scripts]
backtest = "backtest.cli:main"
ranker = "ranker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backtest"]

[tool.hatch.build.targets.wheel.force-include]
"contracts.py" = "contracts.py"
"ranker.py" = "ranker.py"

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "pytest>=9.1.1",
]
