[package]
name = "paper-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Safety invariant (architecture.md §6 P5): this crate must NEVER depend on a
# broker order-submission client. Market-data subscriptions only.
[dependencies]
engine-core = { path = "../../engine-core" }
