[package]
name = "paper-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

# Safety invariant (architecture.md §6 P5): this crate must NEVER depend on a
# broker order-submission client. Market-data subscriptions only —
# tokio-tungstenite talks to Alpaca's DATA stream, and no trading-API client
# exists in this dependency tree.
[dependencies]
chrono = "0.4"
engine-core = { path = "../../engine-core" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
